--- a/index.css
+++ b/index.css
@@ -1,33 +1,24 @@
-:root {
-  --color-primary: #2584ff;
-  --color-secondary: #00d9ff;
-  --color-accent: #ff3400;
-  --color-headings: #1b0760;
-  --color-body: #918ca4;
-}
-/* @font-face {
-  font-family: San Francisco Display Regular;
-  src: url(./Fonts/SanFranciscoDisplay-Regular.otf);
+@font-face {
+  font-family: france-reg;
+  src: url(./Fonts/sanfranciscodisplay-regular-webfont.woff);
 }
 @font-face {
-  font-family: San Francisco Display Med;
-  src: url(./Fonts/SanFranciscoDisplay-Medium.otf);
-  font-weight: medium;
+  font-family: france-med;
+  src: url(./Fonts/sanfranciscodisplay-medium-webfont.woff);
 }
 @font-face {
-  font-family: San Francisco Display Bold;
-  src: url(./Fonts/SanFranciscoDisplay-Bold.otf);
-  font-weight: bold;
+  font-family: france-bold;
+  src: url(./Fonts/sanfranciscodisplay-bold-webfont.woff);
 }
 @font-face {
-  font-family: San Francisco Display SemBd;
-  src: url(./Fonts/SanFranciscoDisplay-Semibold.otf);
-  font-weight: semibold;
-} */
+  font-family: france-semibold;
+  src: url(./Fonts/sanfranciscodisplay-semibold-webfont.woff);
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
-  font-family: San Francisco Display Regular;
+  font-family: france-reg;
 }
 
 a {
@@ -55,7 +46,7 @@ a {
 }
 
 .topMedText {
-  font-family: San Francisco Display Med;
+  font-family: france-med;
 }
 .topImageText > h3 {
   font-size: 50px;
@@ -90,7 +81,7 @@ a {
   margin: auto;
   position: absolute;
   top: -5px;
-  left: 50%;
+  left: 48%;
 }
 .blockCircleRed {
   background-color: red;
@@ -184,27 +175,29 @@ a {
 .blocksquare {
   width: 10px;
   height: 10px;
-  background-color: red;
-  border-radius: 80%;
-
   display: grid;
   margin: auto;
   position: absolute;
-  top: 10px;
-  left: 50%;
+  border: 1px solid #a2a2a2;
+  top: 25%;
+  left: 48%;
 }
 
 .formArea {
   padding: 0 20%;
+  width: 100%;
 }
 
 .formArea > h1 {
-  font-size: 70px;
+  font-size: 45px;
+  text-align: center;
   color: #4d4d4d;
+  margin-bottom: 10px;
 }
 .form {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+  grid-template-columns: repeat(2, 1fr) !important;
   column-gap: 50px;
 }
 
@@ -212,18 +205,206 @@ a {
   outline: none;
   border: 0;
   border-bottom: 2px solid #656565;
-  padding: 30px;
-  font-size: 20px;
+  padding: 15px 5px;
+  font-size: 15px;
   color: #000000;
+}
+
+.input::placeholder {
+  color: #000000;
+  opacity: 1;
 }
 .form > textarea {
   outline: none;
   border: 0;
   border-bottom: 2px solid #656565;
-  padding: 30px;
-  font-size: 20px;
+  padding: 15px 5px;
+  font-size: 15px;
   color: #000000;
   grid-column: 1 / span 2;
+}
+
+.form > textarea::placeholder {
+  color: #000000;
+  opacity: 1;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 20px;
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
+.button {
+  border: 0px;
+  padding: 5px 15px;
+  border-radius: 3px;
+  background-color: white;
+}
+
+.coloredButton {
+  background-color: #006a9e;
+  color: white;
+}
+.groupedButton {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  border: 2px solid #d8d8d8;
+  border-radius: 3px;
+}
+.groupedButton > img {
+  border-radius: 3px;
+  padding: 5px;
+}
+
+/* Footer */
+.footer {
+  background: #fafafa;
+  padding: 0 3%;
+  padding-top: 45px;
+  padding-bottom: 20px;
+}
+
+.footer a {
+  color: #939598;
+  transition: color 0.3s;
+  font-size: 15px;
+}
+
+.footer__section {
+  padding: 2rem;
+}
+
+.footer__section .list {
+  margin: 0;
+}
+
+.footer__heading {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #006a9e;
+}
+
+.footer__brand {
+  margin-top: 5rem;
+  text-align: center;
+}
+
+.footer__brand img {
+  max-width: 230px;
+}
+
+.footer__copyright {
+  font-size: 2.1rem;
+  color: #fff;
+  opacity: 0.3;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+}
+
+.company {
+  width: 200px;
+  margin-bottom: 10px;
+}
+
+.companyt {
+  font-size: 15px;
+  color: #006a9e;
+  font-family: france-semibold;
+  margin-bottom: 20px;
+}
+
+/* Inputs */
+.inputt {
+  font-size: 15px;
+  outline: 0px;
+  padding: 15px 5px;
+  border: 0;
+  border-radius: 20px;
+}
+
+.input::placeholder {
+  color: black;
+}
+
+.input-group {
+  border-radius: 20px;
+  display: grid;
+  margin-bottom: 20px;
+  grid-template-columns: 1fr auto;
+  -webkit-box-shadow: 0 8px 6px -6px black;
+  -moz-box-shadow: 0 8px 6px -6px black;
+  box-shadow: 0 8px 6px -6px black;
+}
+
+.input-group .input {
+  padding: 15px 5px;
+  width: 0;
+}
+
+.input-group .btn {
+  margin: 4px;
+  border: 0;
+  width: 40px;
+  border-radius: 50%;
+  background-color: #006a9e;
+  color: white;
+}
+
+.checkbox {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.checkbox > input {
+  margin: 0 10px;
+}
+
+.checkbox > p {
+  font-size: 15px;
+  color: #4d4d4d;
+}
+
+.social {
+  background-color: #006a9e;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  color: #fafafa;
+  padding: 20px 5%;
+  font-family: france-semibold;
+}
+.socialText {
+  font-size: 20px;
+  display: grid;
+  align-content: center;
+}
+
+.socialIcons {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  align-content: center;
+}
+.socialIcons > p {
+  font-size: 36px;
+  margin-right: 30px;
+  white-space: nowrap;
+}
+
+.end {
+  padding: 20px 5%;
+  color: #4d4d4d;
 }
 @media only screen and (max-width: 800px) {
   .category {
@@ -243,15 +424,62 @@ a {
   }
   .topImage {
     background-size: contain;
-    background-repeat: no-repeat;
   }
   .blockLast {
     border-right: 0px solid grey;
   }
   .lineSquare {
-    right: 45%;
+    right: 44%;
   }
   .type {
     grid-template-columns: 1fr;
+  }
+  .container {
+    grid-template-columns: 1fr;
+  }
+  .socialIcons {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .socialIcons > p {
+    margin: 15px 0;
+    grid-column: 1 / span 3;
+  }
+
+  .socialIcons > img {
+    margin: 15px 0;
+  }
+  .social {
+    display: block;
+  }
+  .form {
+    width: 100%;
+    grid-template-columns: 1fr !important;
+  }
+  .buttons {
+    grid-template-columns: 1fr !important;
+    row-gap: 20px;
+  }
+  .form > textarea {
+    grid-column: 1 / 1;
+  }
+  .type {
+    row-gap: 10px;
+  }
+
+  .types {
+    border: 2px solid #808080;
+  }
+  .topImageText {
+    margin-left: 0;
+    text-align: center;
+  }
+  .formArea > h1 {
+    font-size: 25px;
+  }
+  .formArea {
+    padding: 0 10%;
+  }
+  .footer__section {
+    border-bottom: 2px solid #808080;
   }
 }
