--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ a {
 }
 .blockFirst {
   border-radius: 8px 0 0 8px;
+  border-left: 2px solid #d8d8d8;
 }
 .blockLast {
   border-radius: 0 8px 8px 0;
